SERVER-46032 Check if collection has stale epoch before setting shard stale